--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "preparation",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "lucide": "^0.474.0",
-    "lucide-react": "^0.474.0",
-    "primereact": "^10.9.2",
+    "lucide-react": "^0.473.0",
+    "primereact": "^10.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "web-vitals": "^4.2.4"
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,9 +36,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.35",
-    "postcss-nesting": "^12.0.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
